--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "symfony/console": "7.0.*",
         "symfony/dotenv": "7.0.*",
         "symfony/flex": "^2",
+        "symfony/form": "7.0.*",
         "symfony/framework-bundle": "7.0.*",
         "symfony/runtime": "7.0.*",
         "symfony/twig-bundle": "7.0.*",
@@ -71,7 +72,13 @@
         }
     },
     "require-dev": {
+        "doctrine/annotations": "^2.0",
         "doctrine/doctrine-fixtures-bundle": "^3.5",
-        "symfony/maker-bundle": "^1.53"
+        "phpunit/phpunit": "^9.5",
+        "symfony/browser-kit": "7.0.*",
+        "symfony/css-selector": "7.0.*",
+        "symfony/maker-bundle": "^1.53",
+        "symfony/phpunit-bridge": "^7.0",
+        "symfony/validator": "7.0.*"
     }
 }
