--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "symfony/form": "7.0.*",
         "symfony/framework-bundle": "7.0.*",
         "symfony/runtime": "7.0.*",
+        "symfony/security-bundle": "7.0.*",
         "symfony/twig-bundle": "7.0.*",
         "symfony/yaml": "7.0.*",
         "twig/extra-bundle": "^2.12|^3.0",
@@ -79,6 +80,8 @@
         "symfony/css-selector": "7.0.*",
         "symfony/maker-bundle": "^1.53",
         "symfony/phpunit-bridge": "^7.0",
-        "symfony/validator": "7.0.*"
+        "symfony/stopwatch": "7.0.*",
+        "symfony/validator": "7.0.*",
+        "symfony/web-profiler-bundle": "7.0.*"
     }
 }
